[KER-01] feat: MemberRepository 개발